ENG-5126 - Fix display of resource numbers when overflow occurs
Summary: Fixes T4

Test Plan:
Check that Universe tables and overview cards display correctly.

# Tip: Write "Fixes T123" in your summary to automatically close the
# corresponding task when this change lands.

Reviewers: vit.pankin, ram

Reviewed By: ram

Subscribers: ui, jenkins-bot

Maniphest Tasks: T4

Differential Revision: https://phabricator.dev.yugabyte.com/D6549

--- a/managed/ui/src/components/common/descriptors/stylesheets/YBResourceCount.scss
+++ b/managed/ui/src/components/common/descriptors/stylesheets/YBResourceCount.scss
@@ -15,6 +15,7 @@
     color: $YB_VIOLET_TEXT_NEW;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: inline-block;
   }
 
   .yb-resource-count-unit {
